# bdna-jepa

./: .gitignore  LICENSE  README.md  pyproject.toml
bdna_jepa/: __init__.py  config.py  hub.py
bdna_jepa/data/: __init__.py  dataset.py  masking.py  tokenizer.py
bdna_jepa/evaluation/: __init__.py  clustering.py  probing.py  visualization.py
bdna_jepa/losses/: __init__.py  criterion.py
bdna_jepa/models/: 01_pretrain_jepa.py  __init__.py  encoder.py  jepa.py  predictor.py  pretrain_ijepa.py
bdna_jepa/models/archive/: __init__.py  deploy_v45.sh  patch_v41.sh  pretrain_ijepa_v44.py  pretrain_v45.py  setup_v42_step2.sh  setup_v42_step3.sh
bdna_jepa/models/jepa_v5/: __init__.py  deploy_v5.sh  pretrain_v5.py  pretrain_v6.py
bdna_jepa/models/jepa_v6/: __init__.py  deploy_v6.sh  pretrain_v6.py
bdna_jepa/training/: __init__.py  setup_v42_step1.sh  trainer.py
bdna_jepa/utils/: __init__.py  features.py  logging.py  metrics.py
configs/evaluation/: full.yaml
configs/model/: v3.1.yaml  v4.0.yaml
configs/training/: v3.1.yaml  v4.0.yaml
docs/: ARCHITECTURE.md  CHANGELOG.md
notebooks/: embedding_analysis.ipynb
outputs/eval/v6.2_epoch005/: summary.json
outputs/eval/v6.2_epoch005_20k/: summary.json
scripts/: evaluate.py  evaluate_v6.py  export.py  pretrain.py  visualize.py
tests/: test_encoder.py  test_losses.py  test_tokenizer.py  test_training_step.py
tools/: build_genome_dataset.py  download_genomes.py  extract_sequences.py  train_tokenizer.py
